# lunatics-mission-analysis

./: LICENSE  README.md  reaction_wheel.py
ADCS/: reaction_wheel.py
ADCS/Determination Algorithms/: ConstantClass.m  QUEST.m  ads_integrated.m  ekf_backup.m  ekf_backup_acc.m  ekf_backup_mag.m  ekf_bias.m  ekf_code.m
ADCS/Determination Algorithms/Cpp_Code/: ads_helpers.cpp  ads_helpers.h  ads_integrated.cpp  graphing_csv.py  log.csv  log_true.csv
ADCS/Determination Algorithms/Cpp_Code/updated/: ads.cpp  ads_functions.cpp  ads_header.h
ADCS/Determination Algorithms/Cpp_ads_code/: ads_functions.cpp  ads_headers.h  ads_integrated.cpp  graphing_csv.py
ADCS/IMU/: cali_sensor.ino  sensor_fusion.ino
ADCS/SunSensor/: CMakeLists.txt  coordinate_transforms.py  sun_sensor_cpp  sun_sensor_cpp.cpp  sun_sensor_v3.py  sun_sensors.py  sun_sensorv2.py  test  test.cpp  triangulation.py
payload/: output.csv  output1.csv  plot_spectrum.py  plotting.py  spec_values.csv  spectrum.py
